docs: add pixi tasks to packaging guidelines

--- a/.github/workflows/ci-tests-docs.yml
+++ b/.github/workflows/ci-tests-docs.yml
@@ -80,7 +80,7 @@ jobs:
 
       - name: "test images (${{ matrix.version }})"
         run: |
-          pixi run --frozen doc-images
+          pixi run --frozen tests-docs
 
       - name: "upload test images"
         if: ${{ failure() && !cancelled() }}
