configure dependabot cooldown and skip dependency group

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,8 @@ updates:
     open-pull-requests-limit: 3
     schedule:
       interval: "daily"
+    cooldown:
+      default-days: 7
     groups:
       gha:
         patterns:
@@ -29,6 +31,11 @@ updates:
     schedule:
       interval: "weekly"
       day: "sunday"
+    cooldown:
+      default-days: 7
+      semver-major-days: 5
+      semver-minor-days: 3
+      semver-patch-days: 1
     groups:
       pip:
         patterns:
