--- a/.github/workflows/ci-linkcheck.yml
+++ b/.github/workflows/ci-linkcheck.yml
@@ -45,7 +45,17 @@ jobs:
         id: lychee
         uses: lycheeverse/lychee-action@a8c4c7cb88f0c7386610c35eb25108e448569cb0
         with:
-          args: "--cache --no-progress --verbose './docs/src/**/*.md' './docs/src/**/*.rst' './docs/src/**/*.txt' './changelog/*.rst' './src/**/*.py'"
+          args: |
+            --cache
+            --no-progress
+            --verbose
+            --max-concurrency 1
+            --exclude '^https://github\.com/bjlittle/geovista\.git'
+            './docs/src/**/*.md'
+            './docs/src/**/*.rst'
+            './docs/src/**/*.txt'
+            './changelog/*.rst'
+            './src/**/*.py'
           fail: false
 
       - name: "report failure"
