--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -26,12 +26,11 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-permissions:
-  id-token: none
-
 defaults:
   run:
     shell: bash -l {0}
+
+permissions: {}
 
 jobs:
   tests:
