--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,9 @@
 
 ci:
   autofix_prs: false
+  autofix_commit_msg: "style: pre-commit.ci auto-fixes"
   autoupdate_commit_msg: "chore: update pre-commit hooks"
+  autoupdate_schedule: "weekly"
 
 repos:
   - repo: https://github.com/abravalheri/validate-pyproject
