deps: dependabot ignore pypi patch

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -35,6 +35,10 @@ updates:
       semver-major-days: 5
       semver-minor-days: 3
       semver-patch-days: 1
+    ignore:
+      - dependency-name: "*"
+        # ignore patch updates
+        update-types: ["version-update:semver-patch"]
     groups:
       pip:
         patterns:
