--- a/.github/workflows/ci-tests-pypi.yml
+++ b/.github/workflows/ci-tests-pypi.yml
@@ -101,7 +101,7 @@ jobs:
 
     - name: "test pypi (py${{ matrix.version }})"
       run: |
-        xvfb-run -a pytest --generated_image_dir test_images
+        xvfb-run -a pytest
 
     - name: "report failure"
       if: ${{ failure() && github.event_name == 'schedule' }}
