--- a/pyproject.toml
+++ b/pyproject.toml
@@ -603,12 +603,12 @@ pytest-pretty = ">=1.3.0,<2"
 pytest-pyvista = ">=0.3.1,<0.4"
 
 [tool.pixi.feature.test.tasks.tests-clean]
-cmd = "rm -rf docs/image_cache tests/plotting/unit_image_cache test_images test_images_failed"
+cmd = "rm -rf docs/image_cache tests/plotting/unit_image_cache test_images failed_images"
 description = "Purge all documentation and image unit test caches"
 
 [tool.pixi.feature.test.tasks.tests-unit]
 args = [{ "arg" = "option", "default" = "" }]
-cmd = "pytest {% if option | length %}-m '{{ option }}' {% endif %}--generated_image_dir test_images"
+cmd = "pytest {% if option | length %}-m '{{ option }}' {% endif %}--generated_image_dir test_images --failed_image_dir failed_images"
 depends-on = [{ "task" = "tests-clean" }]
 description = "Perform unit tests"
 
