--- a/.github/workflows/ci-tests-pypi.yml
+++ b/.github/workflows/ci-tests-pypi.yml
@@ -101,7 +101,7 @@ jobs:
 
     - name: "test pypi (py${{ matrix.version }})"
       run: |
-        xvfb-run -a pytest
+        xvfb-run -a pytest --failed_image_dir failed_images
 
     - name: "report failure"
       if: ${{ failure() && github.event_name == 'schedule' }}
@@ -116,3 +116,10 @@ jobs:
         EOL
         )
         gh issue create --title "${TITLE}" --body "${BODY}" --label "bot" --label "new: issue" --repo "${{ github.repository }}"
+
+    - name: "upload failed images"
+      if: ${{ failure() }}
+      uses: actions/upload-artifact@v5
+      with:
+        name: ci-tests-pypi-failed-images-${{ github.job }}-${{ strategy.job-index }}
+        path: ${{ github.workspace }}/failed_images
