docs: render community packages in table

--- a/docs/src/reference/whatsnew/latest.rst.template
+++ b/docs/src/reference/whatsnew/latest.rst.template
@@ -41,4 +41,5 @@ The patches for this **major/minor** release of ``geovista`` include:
 
 
 .. comment
-    Whatsnew resources in alphabetical order:
+
+   ⚠️ Whatsnew resources in alphabetical order:
