--- a/.github/workflows/ci-label.yml
+++ b/.github/workflows/ci-label.yml
@@ -32,7 +32,7 @@ jobs:
       - uses: actions-ecosystem/action-add-labels@18f1af5e3544586314bbe15c0273249c770b2daf
         if: ${{ github.event.pull_request.user.login == 'dependabot[bot]' || github.event.pull_request.user.login == 'geovista-ci[bot]' || github.event.pull_request.user.login == 'pre-commit-ci[bot]' }}
         with:
-          labels: 'skip changelog'
+          labels: 'skip-changelog'
 
       - uses: actions-ecosystem/action-add-labels@18f1af5e3544586314bbe15c0273249c770b2daf
         if: ${{ startsWith(github.event.pull_request.head.ref, 'breaking-change') || startsWith(github.event.pull_request.head.ref, 'breaking') || startsWith(github.event.pull_request.head.ref, 'break') }}
@@ -47,7 +47,7 @@ jobs:
       - uses: actions-ecosystem/action-add-labels@18f1af5e3544586314bbe15c0273249c770b2daf
         if: ${{ startsWith(github.event.pull_request.head.ref, 'debt') }}
         with:
-          labels: 'type: tech debt'
+          labels: 'type: tech-debt'
 
       - uses: actions-ecosystem/action-add-labels@18f1af5e3544586314bbe15c0273249c770b2daf
         if: ${{ startsWith(github.event.pull_request.head.ref, 'doc') || startsWith(github.event.pull_request.head.ref, 'docs') }}
