--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ ignore = ["src/geovista/_version.py"]
 
 
 [tool.codespell]
-ignore-words-list = "whet,projets"
+ignore-words-list = "nD,projets,whet"
 skip = ".git,*.css,*.ipynb,*.js,*.html,*.map,*.po,CODE_OF_CONDUCT.md"
 
 
