docs: fontawesome icons branding

--- a/docs/src/reference/whatsnew/latest.rst.template
+++ b/docs/src/reference/whatsnew/latest.rst.template
@@ -37,7 +37,7 @@ The patches for this **major/minor** release of ``geovista`` include:
     Your feedback is important to us. So don't hesitate to share
     with us on :fab:`github` :issue:`GitHub<new/choose>`.
 
-    We'd 💚 to hear from you.
+    We'd ❤️ to hear from you.
 
 
 .. comment
