--- a/.github/workflows/ci-stale.yml
+++ b/.github/workflows/ci-stale.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: "ubuntu-latest"
 
     steps:
-      - uses: actions/stale@v10
+      - uses: actions/stale@997185467fa4f803885201cee163a9f38240193d
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
