--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -52,7 +52,7 @@ jobs:
             coverage: "--cov-report= --cov=geovista"
 
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8
         with:
           fetch-depth: 0
           persist-credentials: false
@@ -91,7 +91,7 @@ jobs:
 
       - name: "upload failed images"
         if: ${{ failure() }}
-        uses: actions/upload-artifact@v6
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f
         with:
           name: ci-tests-failed-images-${{ github.job }}-${{ strategy.job-index }}
           path: ${{ github.workspace }}/failed_images
@@ -104,7 +104,7 @@ jobs:
           mv .coverage ${COVERAGE_FILE}
 
       - if: ${{ matrix.coverage }}
-        uses: actions/upload-artifact@v6
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f
         with:
           name: coverage-artifacts-${{ github.job }}-${{ strategy.job-index }}
           path: ${{ github.workspace }}/ci-test-coverage*
@@ -116,12 +116,12 @@ jobs:
     runs-on: "ubuntu-latest"
 
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8
         with:
           fetch-depth: 0
           persist-credentials: false
 
-      - uses: actions/setup-python@v6
+      - uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548
         with:
           python-version: "3.x"
 
@@ -129,7 +129,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install coverage
 
-      - uses: actions/download-artifact@v7
+      - uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131
         with:
           pattern: coverage-artifacts-*
           merge-multiple: true
