--- a/.github/workflows/ci-update-pr-branch.yml
+++ b/.github/workflows/ci-update-pr-branch.yml
@@ -23,7 +23,7 @@ jobs:
 
     steps:
       - name: "generate token"
-        uses: actions/create-github-app-token@v2
+        uses: actions/create-github-app-token@29824e69f54612133e76f7eaac726eef6c875baf
         id: generate-token
         with:
           app-id: ${{ secrets.AUTH_APP_ID }}
