--- a/.github/workflows/composite/geovista-cache/action.yml
+++ b/.github/workflows/composite/geovista-cache/action.yml
@@ -29,7 +29,7 @@ runs:
         fi
 
     - name: "check geovista cache"
-      uses: actions/cache@v5
+      uses: actions/cache@9255dc7a253b0ccc959486e2bca901246202afeb
       id: geovista-cache
       with:
         path: ~/.cache/geovista
