--- a/.github/workflows/ci-first-contribution.yml
+++ b/.github/workflows/ci-first-contribution.yml
@@ -18,7 +18,7 @@ permissions: {}
 
 jobs:
   welcome:
-    name: "welcome first contribution"
+    name: "welcome"
     runs-on: ubuntu-latest
 
     permissions:
