--- a/.github/workflows/ci-label.yml
+++ b/.github/workflows/ci-label.yml
@@ -1,4 +1,5 @@
 # Reference:
+#   - https://github.com/actions/create-github-app-token
 #   - https://github.com/actions/labeler
 #   - https://github.com/actions-ecosystem/action-add-labels
 
@@ -6,7 +7,7 @@ name: ci-label
 
 on:
   pull_request:
-    types: [opened, edited, reopened]
+    types: [opened, edited, reopened, synchronize]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -27,9 +28,16 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
 
+      - name: "generate token"
+        uses: actions/create-github-app-token@29824e69f54612133e76f7eaac726eef6c875baf
+        id: generate-token
+        with:
+          app-id: ${{ secrets.AUTH_APP_ID }}
+          private-key: ${{ secrets.AUTH_APP_PRIVATE_KEY }}
+
       - uses: actions/labeler@634933edcd8ababfe52f92936142cc22ac488b1b
         with:
-          repo-token: ${{ secrets.GEOVISTA_BOT_TOKEN }}
+          repo-token: ${{ steps.generate-token.outputs.token }}
 
       - uses: actions-ecosystem/action-add-labels@18f1af5e3544586314bbe15c0273249c770b2daf
         if: ${{ github.event.pull_request.user.login == 'dependabot[bot]' || github.event.pull_request.user.login == 'geovista-ci[bot]' || github.event.pull_request.user.login == 'pre-commit-ci[bot]' }}
